--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id "com.github.johnrengelman.shadow" version "7.1.2"
     id "application"
+    id 'maven-publish'
 
 }
 
@@ -13,6 +14,14 @@ apply(plugin: "com.github.johnrengelman.shadow")
 
 repositories {
     mavenCentral()
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/my-username/my-library")
+        credentials {
+            username = System.getenv("GITHUB_ACTOR")
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 ext {
     javaMainClass = "de.vantrex.jdkswitcher.Main"
@@ -32,6 +41,15 @@ shadowJar {
     }
 }
 
+publishing {
+    publications {
+        register("jar", MavenPublication) {
+            pom {
+                url.set("https://github.com/Vantrex/JDKSwitcher.git")
+            }
+        }
+    }
+}
 
 dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
