--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ repositories {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/my-username/my-library")
         credentials {
-            username = System.getenv("GITHUB_ACTOR")
-            password = System.getenv("GITHUB_TOKEN")
+            username = System.getenv("USERNAME")
+            password = System.getenv("TOKEN")
         }
     }
 }
