--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,13 @@ shadowJar {
 }
 
 publishing {
-    publications {
-        register("jar", MavenPublication) {
-            pom {
-                url.set("https://github.com/Vantrex/JDKSwitcher.git")
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/octocat/hello-world"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
